--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               >Champion™ II 50</a
             >
           </h3>
-          <p class="price">€149.00</p>
+          <p class="price">€249.00</p>
         </article>
         <article>
           <p class="new">NEW</p>
@@ -1209,7 +1209,7 @@
               alt="facebook icon"
           /></a>
           <a
-            href="http://www.twitter.com/Fender/"
+            href="https://x.com/Fender"
             target="_blank"
             rel="noopener noreferrer"
             ><img
